# bagEL

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  azure-pipeline.yaml  create-new-source.sh  load_env.py  pip-install-all-requirements.sh  pre-commit-setup.sh  run-tests.sh
bagel/: requirements.txt  run_tests.sh  setup.cfg  setup.py
bagel/src/bagel/: __init__.py  bagel.py  base_clients.py  clients.py  data.py  datadog_logs.py  errors.py  integration.py  logger.py  table.py  util.py
bagel/tests/: fakes.py  test_bagel.py  test_bite.py  test_clients.py  test_datadog_logs.py  test_integration.py  test_table.py  test_util.py
bagel/tests/source_dir/: tables.yaml
cicd/scripts/: docker_build_push.sh  specify_terraform_targets.sh
cicd/templates/: docker.yaml  terraform-apply.yaml  terraform-plan.yaml
cicd/terraform/: main.tf  providers.tf  variables.tf
cicd/terraform-aci/: main.tf  variables.tf
sources/_template/: Dockerfile  [source_name].py  get_data.py  tables.yaml
sources/aha/: get_data.py  tables.yaml
sources/doclink/: get_data.py  requirements.txt  tables.yaml
sources/etq/: get_data.py  tables.yaml
sources/itsm/: get_data.py  tables.yaml
sources/liferay_analytics_cloud/: get_data.py  lac_sample_data.json  tables.yaml
sources/liferay_backend/: get_data.py  tables.yaml
sources/looker/: get_data.py  requirements.txt  tables.yaml
sources/looker_sdk/: get_data.py  tables.yaml
sources/national_vulnerability_database/: get_data.py  tables.yaml
sources/okta/: Dockerfile2  get_data.py  okta_sample_data.json  requirements.txt  (+1 more)
(+35 files in other folders)
