[metadata]
name = bagel
description = ELT Tool
author = Christopher Alexeev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    bagel
install_requires =
    datetime
    azure-data-tables
    azure-core
    azure-storage-blob
    pyyaml
python_requires = >=3.8
package_dir =
    =src
zip_safe = no